--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </ul>
     <h2>Certifications</h2>
         <ul>
-            <li>Rofessional Educator Certification</li>
+            <li>Professional Educator Certification</li>
                 <ul>
                     <li>9-12 Mathematics</li>
                 </ul>
